Changes in version 1.2.7.1
--------------------------

  * added new option for saving the printer output to a text file,
    either as the raw characters sent to the printer, or converted to
    ASCII
  * when using the mouse to set the cursor position, the color of the
    character under the cursor is now saved, set, and restored correctly

Changes in version 1.2.7
------------------------

  * added support for using the mouse to change the cursor position in
    the emulated machine, and copying text to and pasting from the
    clipboard; the following functions are available:
      left click: sets the cursor position
      right click: sets the cursor position, and copies the selected
        word to the clipboard
      ctrl + right click: sets the cursor position, and copies text from
        the selected line to the clipboard
      shift + right click: copies text from the whole screen to the
        clipboard without changing the cursor position
      middle click: sets the cursor position, and pastes text from the
        clipboard
      shift + middle click: pastes text from the clipboard without
        changing the cursor position
    Note that these are disabled when a display mode that hides the menu
    bar and the mouse cursor is selected, or light pen emulation - which
    also uses the mouse - is enabled.
  * new command line option (-keybuf) for typing text of any length at
    startup; the text can also be read from a file
  * added machine configuration option to control the SID output volume;
    this also affects the sound recorded to AVI files
  * increased TED audio output level relative to the default SID output
    level, for better accuracy in programs that use both types of sound
    at the same time
  * minor sound emulation fixes
  * the process priority of the emulator can be changed from the GUI
    (currently, this is only implemented on Windows)
  * some utility improvements: 'compress' has more options now, and is