@@ -4,8 +4,11 @@ Changes in version 1.2.7.1
   * added new option for saving the printer output to a text file,
     either as the raw characters sent to the printer, or converted to
     ASCII
+  * slightly improved compression when saving the printer output in TGA
+    format
   * when using the mouse to set the cursor position, the color of the
     character under the cursor is now saved, set, and restored correctly
+  * minor optimizations in serial device emulation
 
 Changes in version 1.2.7
 ------------------------
